deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  label:
    app.kubernetes.io/name: manager
    app.kubernetes.io/version: '0.0.1'
spec:
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
        - name: backend
          image: backend
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/
              port: http
          readinessProbe:
            httpGet:
              path: /api/
              port: http
          startupProbe:
            httpGet:
              path: /api/
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  labels:
    app.kubernetes.io/name: manager
    app.kubernetes.io/version: '0.0.1'
spec:
  selector:
    app: manager
  ports:
  - port: 80
    name: http
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manager
  labels:
    app.kubernetes.io/name: manager
    app.kubernetes.io/version: '0.0.1'
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: manager
            port: 
              name: http
